# buster

./: .gitignore  LICENSE  README.md  config.example.toml  install.sh  pyproject.toml  uninstall.sh
.claude/: launch.json
buster/: __init__.py  main.py  updates.py
buster/actions/: __init__.py  catalog.py  model.py  service.py
buster/agent/: __init__.py  loop.py  tasks.py
buster/api/: __init__.py  app.py  routes.py
buster/buildly/: __init__.py  adapter.py  associate.py  contracts.py  devservice.py  devservice_mock.py  devtools.py  mcp_client.py  models.py  protocol.py  sync.py  work.py
buster/cache/: __init__.py  manager.py
buster/cli/: __init__.py  art.py  guide.py  interactive.py  main.py  onboarding.py  service.py
buster/config/: __init__.py  paths.py  settings.py
buster/context/: __init__.py  builder.py
buster/database/: __init__.py  db.py  migrations.py
buster/dev/: __init__.py  setup.py
buster/diagnostics/: __init__.py  common.py  doctor.py  linux.py  (+5 more)
docs/: ARCHITECTURE.md  DATABASE.md  DEVELOPMENT.md  FORGE_TEMPLATE_ALIGNMENT.md  GETTING_STARTED.md  INSTALL.md  LCDP.md  MIGRATIONS.md  PHASE2.md  PROMPT_LIBRARY.md  ROADMAP.md  SECURITY.md
tests/: conftest.py  test_api_parity.py  test_cache.py  test_config.py  test_database.py  test_dev_setup.py  test_dev_workflow.py  test_discovery_nodes.py  test_events_research.py  test_hosted_providers.py  test_mcp_client.py  test_memory_fts.py  test_naming.py  test_onboarding_launch.py  test_permissions_actions.py  test_phase2_contracts_sync.py  test_phase3_work.py  test_prompts_capability.py  test_research_solutions.py  test_router.py  test_runtime_routing.py  test_scaffold.py  test_tools_reports.py  test_uninstall.py  test_updates_providers.py
(+83 files in other folders)
