[project]
name = "buster-assistant"
version = "0.1.0"
description = "Buster — a lightweight, hardware-adaptive, local-first assistant for research, reporting, diagnostics, and safe action."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Buildly", email = "team@buildly.io" }]
keywords = ["assistant", "local-first", "ollama", "research", "diagnostics"]

dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "typer>=0.12",
    "rich>=13.7",
    "httpx>=0.27",
    "jinja2>=3.1",
    "sse-starlette>=2.0",
    "tomli>=2.0; python_version < '3.11'",
    "tomli-w>=1.0",
    "psutil>=5.9",
    "python-multipart>=0.0.9",
    "zeroconf>=0.131",
    "selectolax>=0.3.21",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[project.scripts]
buster = "buster.cli.main:app"

[project.urls]
Homepage = "https://buster.buildly.io"
Repository = "https://github.com/buildlyio/buster"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["buster"]

[tool.hatch.build.targets.wheel.force-include]
"toolpacks" = "buster/_bundled/toolpacks"
"skills" = "buster/_bundled/skills"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]  # FastAPI/Typer use function calls in defaults
